SEO fixes: twitter, sitemap URLs, canonical, llms.txt
- twitter:site → @mariiafonina
- sitemap/canonical → site.mariafonina.ru
- Статья Шумера: правильный slug
- Twitter/X добавлен в llms.txt

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
     <meta name="description" content="Мари Афонина (Мария Галантер) — создатель курса Масштаб по запускам и продюсированию. Обучение вайбкодингу и искусственному интеллекту. Антикризисная книга для предпринимателей. 1.5 млрд руб. в запусках, 14 000 студентов.">
     <meta name="author" content="Мари Афонина, Мария Галантер" />
     <meta name="keywords" content="Мари Афонина, Мария Галантер, Масштаб, курс Мари Афониной, обучение Мари Афониной, вайбкодинг, антикризисная книга, запуски, продюсирование, ЛАБС, mari_zapuski">
-    <link rel="canonical" href="https://mariafonina.com/" />
+    <link rel="canonical" href="https://site.mariafonina.ru/" />
     
     <!-- AI Crawlers Metadata -->
     <meta name="robots" content="index, follow, max-image-preview:large, max-snippet:-1, max-video-preview:-1" />
@@ -37,7 +37,7 @@
     <meta property="og:image" content="https://storage.googleapis.com/gpt-engineer-file-uploads/Vxf7HD6XTsTE0Fm5NogeqDOz11r1/social-images/social-1761571734380-Screenshot 2025-10-27 at 5.28.45 PM.png">
 
     <meta name="twitter:card" content="summary_large_image" />
-    <meta name="twitter:site" content="@lovable_dev" />
+    <meta name="twitter:site" content="@mariiafonina" />
     <meta name="twitter:image" content="https://storage.googleapis.com/gpt-engineer-file-uploads/Vxf7HD6XTsTE0Fm5NogeqDOz11r1/social-images/social-1761571734380-Screenshot 2025-10-27 at 5.28.45 PM.png">
     
   
